--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
-#logo {
+.logo {
   width: auto;
-  height: 50px;
+  height: 70px;
 }
 
 nav {
@@ -8,13 +8,26 @@ nav {
   display: flex;
   justify-content: space-between;
 }
-#id {
-  padding-left: 50px;
-}
+
 nav > ul {
   display: flex;
 }
 nav > ul > li {
   list-style-type: none;
   margin: 10px;
+}
+.restaurant-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 110px;
+}
+.card {
+  width: 180px;
+  height: 265px;
+  border: 1px solid black;
+  padding: 5px;
+  margin: 10px;
+}
+.card > img {
+  width: 100%;
 }
